rust/quake-ctest/include/c_ref_prelude.h

#define MSG_ReadCoord				 c_ref_MSG_ReadCoord
#define MSG_ReadEntity				 c_ref_MSG_ReadEntity
#define msg_badread					 c_ref_msg_badread
void Sys_Error (const char *error, ...);
/* quakedef.h slice gl_model.h / model_parse.c need. PSET_SCRIPT is
 * unconditional in quakedef.h and changes qmodel_t's layout, so it must be
 * defined before gl_model.h. */
#define PSET_SCRIPT
/* render.h's efrag_t, transcribed (render.h itself #includes tasks.h ->
 * q_stdinc.h -> SDL.h). quake_types::host::Efrag mirrors it field-by-field,
 * and abi_probe.c's host probe takes its offsetof()s from this definition;
 * it reaches entity_t only through a pointer, so it can sit here, ahead of
 * the entity_t transcription further down (which needs protocol.h's
 * entity_state_t). */
typedef struct efrag_s
{
	struct efrag_s	*leafnext;
	struct entity_s *entity;
} efrag_t;
#define MAX_DLIGHTS			  64
FUNC_NORETURN void Host_Error (const char *error, ...);
extern entity_state_t nullentitystate;
/* ---- the quakedef.h slice common_fs.c / steam.c need ---- */

/* scriptable particle system: quakedef.h defines it unconditionally, and
 * COM_Effectinfo_Enumerate is compiled only under it */
#define PSET_SCRIPT
/* Phase 7 M4/M6: Host_EndGame (quakedef.h:480, defined host.c:185) is the
 * one seam of sv_phys.c's bad-movetype sites that stays stub-owned -- host.c
 * is not in build.rs's C_SOURCES. SV_StartSound and sv_player used to be
 * declared (and stub-defined) here for the same reason; M6 pulled sv_main.c
 * and sv_user.c into C_SOURCES, so both are now real, renamed c_ref_* below
 * and declared by the real server.h. */
FUNC_NORETURN void Host_EndGame (const char *message, ...) FUNC_PRINTF (1, 2);
/* render.h's entity_t (and the two structs it embeds by value), transcribed:
 * render.h #includes tasks.h -> q_stdinc.h -> SDL.h, which this build must
 * stay clear of. World_ClipToNetwork walks cl.entities as entity_t, so the
 * layout has to be the real one -- the Rust side sees the same objects
 * through world_glue.c's World_Glue_ClEntity accessor. This transcription is
 * also what abi_probe.c's Phase 7 host probe measures (it used to carry its
 * own private copy; that was moved here so both TUs cannot drift apart).
 * render.h carries the codebase's "!!! if this is changed, it must be
 * changed in rust/quake-ctest/stubs/abi_probe.c too !!!" markers on
 * entity_s/entlerp_s/lightcache_s. */
typedef struct lightcache_s
{
	int	   surfidx;
	vec3_t pos;
	short  ds;
	short  dt;
} lightcache_t;
typedef struct entlerp_s
{
	qboolean movestep;
	int		 prev_frame;
	double	 frame_change_time;
	double	 frame_duration;
	double	 frame_finish_time;
	int		 snap_frames;
	double	 snap_msgtime;
	vec3_t	 prev_origin;
	vec3_t	 prev_angles;
	double	 move_change_time;
	double	 move_duration;
} entlerp_t;
typedef struct entity_s
{
	qboolean forcelink;

	int update_type;

	entity_state_t baseline;
	entity_state_t netstate;

	double			 msgtime;
	vec3_t			 msg_origins[2];
	vec3_t			 origin;
	vec3_t			 msg_angles[2];
	vec3_t			 angles;
	struct qmodel_s *model;
	struct efrag_s	*efrag;
	int				 frame;
	float			 syncbase;
	byte			*colormap;
	int				 effects;
	int				 skinnum;
	int				 visframe;

	int dlightframe;
	int dlightbits;

	struct mnode_s *topnode;

	byte	  eflags;
	byte	  alpha;
	entlerp_t lerp;

#ifdef PSET_SCRIPT
	struct trailstate_s *trailstate;
	struct trailstate_s *emitstate;
#endif
	float  traildelay;
	vec3_t trailorg;

	lightcache_t lightcache;

	int	   contentscache;
	vec3_t contentscache_origin;

	struct entity_blas_s *blas_data;
} entity_t;
void R_BlobExplosion (vec3_t org);
void R_ParticleExplosion (vec3_t org);
void R_ParticleExplosion2 (vec3_t org, int colorStart, int colorLength);
void R_LavaSplash (vec3_t org);
void R_TeleportSplash (vec3_t org);
struct trailstate_s;
void PScript_RunParticleWeather (vec3_t minb, vec3_t maxb, vec3_t dir, float count, int colour, const char *efname);
#define cl                                c_ref_cl
#define CL_AllocDlight                    c_ref_CL_AllocDlight
#define cl_dlights                        c_ref_cl_dlights
#define cl_maxvisedicts                   c_ref_cl_maxvisedicts
#define cl_numvisedicts                   c_ref_cl_numvisedicts
#define cl_visedicts                      c_ref_cl_visedicts
/* cl_tent.c */
#define cl_beams          c_ref_cl_beams
#define CL_ParseTEnt      c_ref_CL_ParseTEnt
#define cl_temp_entities  c_ref_cl_temp_entities
#define CL_UpdateTEnts    c_ref_CL_UpdateTEnts
#define num_temp_entities c_ref_num_temp_entities