Quake/common.h

extern int (*BigLong) (int l);
extern int (*LittleLong) (int l);
extern float (*BigFloat) (float l);
extern float (*LittleFloat) (float l);
void COM_Effectinfo_Enumerate (int (*cb) (const char *pname)); // spike -- for dp compat
void		Info_Enumerate (const char *info, void (*cb) (void *ctx, const char *key, const char *value), void *cbctx);
char *va (const char *format, ...) FUNC_PRINTF (1, 2);